# ChangeLog for x11-misc/wmakerconf
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/wmakerconf/ChangeLog,v 1.39 2012/02/10 18:28:36 voyageur Exp $

*wmakerconf-2.12-r1 (10 Feb 2012)

  10 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> wmakerconf-2.12.ebuild,
  +wmakerconf-2.12-r1.ebuild, +files/wmakerconf-2.12-wmaker-0.95_support.patch:
  Support new windowmaker (small API update and function name collision)

  22 Mar 2011; Jonathan Callen <abcd@gentoo.org> wmakerconf-2.12.ebuild:
  Bump to EAPI=3, merge prefix changes, add ~x86-linux/~amd64-linux

  13 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  wmakerconf-2.12.ebuild:
  mark ~ppc64 wrt #330525

  24 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  wmakerconf-2.12.ebuild:
  stable x86, bug 330525

  20 Aug 2010; Markos Chandras <hwoarang@gentoo.org> wmakerconf-2.12.ebuild:
  Stable on amd64 wrt bug #330525

*wmakerconf-2.12 (06 Jun 2010)

  06 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  +wmakerconf-2.12.ebuild:
  Version bump wrt #237199 by Dustin Polke.

  06 May 2008; Samuli Suominen <drac@gentoo.org> wmakerconf-2.11.ebuild:
  Move pkgconfig to DEPEND wrt #217278.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  11 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmakerconf-2.11.ebuild:
  Add missing dev-util/pkgconfig to DEPEND, see bug #150817.

  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  -wmakerconf-2.8.1-r2.ebuild, -wmakerconf-2.9.2.ebuild:
  Removed old version.

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org>
  wmakerconf-2.11.ebuild:
  Stable on ppc.

  06 Dec 2005; Luis Medinas <metalgod@gentoo.org> wmakerconf-2.11.ebuild:
  Stable on amd64. Bug #114363.

  06 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  wmakerconf-2.11.ebuild:
  Stable on sparc

  03 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> wmakerconf-2.11.ebuild:
  Stable on x86 (bug 114363).
