@@ -3,14 +3,14 @@ Hash: SHA256
 
 AUX wmakerconf-2.12-wmaker-0.95_support.patch 4914 RMD160 25b5d7f10a77931fd24fc311d68ca3698795d645 SHA1 aa5424b5555fd44cafcb0c11fe435b554040bc7b SHA256 a9ba01d4d86b543759985ef1fa59d7daec288ec1c1f9141b49632b536b9ebb1d
 DIST wmakerconf_2.12.tar.gz 830156 RMD160 e5180b57fb0a77a4dd89953ee86cfe1961f1fe17 SHA1 d878497893f4345c4b9a90d3cf4fa8b26e2b6114 SHA256 debfc3b2a26fd4bd2dab4a06155b786e1b36e64145012410eb0de730a79a9bb3
-EBUILD wmakerconf-2.12-r1.ebuild 1431 RMD160 6e484054b90ec7be79e6111cec3bc2133baef012 SHA1 94fd4f5d4614e5526c80fd6ae37602fb11e67071 SHA256 087e8e5f23baa8e8f9197ba77964c1f33c33d68ccb921c0fe52af098eb7fde37
-EBUILD wmakerconf-2.12.ebuild 1184 RMD160 52578744dac71a11ba1285982e1006dbeeec02ff SHA1 12aa033e3f9749d2917e175f9968e8a7c2c36ee4 SHA256 83aec96d54990ad69b796a8e1b18a1862b48e7bfab125fae04b9320ce2aa10b1
-MISC ChangeLog 4920 RMD160 2324c3aed92dd46fec45eeac609bb5159a180d83 SHA1 78725be758507788418b01b20b49830b56632b34 SHA256 22851c061b8becd0d826b07964b786dc250d28052bd513148d9c1827e6bded6e
+EBUILD wmakerconf-2.12-r1.ebuild 1438 RMD160 8530d8b7f7dfa79bed0d82f7af86ab741e304607 SHA1 bf5c629e0d1b3a101ec61a100de1671970554cbb SHA256 891565bb6fc1412c7c2377fdd4268234f49148435b5a6637ebb6ec80a4c73775
+EBUILD wmakerconf-2.12.ebuild 1191 RMD160 4767158f0ef0fcd2edff463fe3ecbd13f13ca1fc SHA1 2ab7fa78ea27372d9211cb43e95682adfb875ece SHA256 494a7ea565f15f1ab6b6efe3b2ba8ccdaa1a4b79545bfb82282ce1ee35f5480a
+MISC ChangeLog 5069 RMD160 a446f33c91f6e3dde6d80bacde58ff7780d56942 SHA1 2d9947c7a1a3fb481daccbc622db821326ccfc8d SHA256 7b9ea92eeaa1e9c4db90fb554a744bdc45187b69cfb6c4c3ff44046f7205623a
 MISC metadata.xml 160 RMD160 ddb4d678bca64884df87cfab19e00ed9b1ff68a7 SHA1 b3d2981594e6dc70e8f74882cb08b541e1031987 SHA256 264f651f5dc3c8c2d37605e94abe49e6b29b7aed9131e82b473f27e12d67ebe7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iF4EAREIAAYFAk81YeAACgkQFYEBGcdFJfLgDQEAhyMvaD5tCgRFYDxkbiOMGjHF
-kHQcJ46Ji82kRV1mYcAA/2sFxD3M0MWF6X/ytqt9i85zbZG29K5j2X+4HOJA/esg
-=ihqy
+iF4EAREIAAYFAk86JnIACgkQFYEBGcdFJfLG1QEApVUiG9RFsYBw7XwE4N6OXOmI
+lwtGFIGTZVnKpG0pqsYA/1ZshBSHJpiQfGSe2H5yZZmENLtGZex2W+2F2VwsQckh
+=E1Vx
 -----END PGP SIGNATURE-----
